# stream-bridge

./: .gitignore  CMakeLists.txt  README.md  bitmap-conversion.h  fstream-bridge.cpp  fstream-bridge.h  ios-base-impl.h  ios-bridge.cpp  ios-bridge.h  iosfwd-bridge.h  iostream-bridge.cpp  iostream-bridge.h  iostream-template.h  istream-bridge.cpp  istream-bridge.h  istream-impl.h  main.cpp  ostream-bridge.cpp  ostream-bridge.h  ostream-impl.h  sstream-bridge.cpp  sstream-bridge.h
include/: fstream-bridge.h  iomanip-bridge.h  ios-bridge.h  iosfwd-bridge.h  istream-bridge.h  ostream-bridge.h  sstream-bridge.h  string-fwd.h
src/: fstream-bridge.cpp  iomanip-bridge.cpp  ios-base-impl.cpp  ios-bridge.cpp  iostream-bridge.cpp  iostream-template.h  istream-bridge.cpp  ostream-bridge.cpp  sstream-bridge.cpp
